here is the videoList

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,8 +31,11 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
+    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
     </string>
+    <string name="videolist_demo_name">Video List</string>
+    <string name="playerfragment_text">This is a YouTubePlayerFragment!</string>
+    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
+
 
 </resources>
